--- a/dags/CAMA/CMPNG.env
+++ b/dags/CAMA/CMPNG.env
@@ -1,1 +1,2 @@
-export SANDBOX=/home/sandbox/poc/jkozak/power_one/source/CAMA/ods
+SANDBOX=/home/sandbox/poc/jkozak/power_one/source/CAMA/ods
+PYTHONPATH=/home/pythonpath/cmpng
