--- a/dags/CAMA/CMPNG_DELTA.env
+++ b/dags/CAMA/CMPNG_DELTA.env
@@ -9,3 +9,5 @@ SOURCE_FILE_PATH=/var/source_file_path
 ARCHIVE_DEL_FLAG=
 JOB_NAME=F_DEPLOY_CAMA_CMPNG_DELTA_POWER_ONE
 SCHEDULE_NAME=SCHEDULER_NAME_CMPNG_DELTA_CAMA
+SCHEMA_NAME=CAMA
+TABLE_NAME=CMPNG_DELTA
