--- a/dags/CAMA/CMPNG_DELTA.env
+++ b/dags/CAMA/CMPNG_DELTA.env
@@ -6,7 +6,7 @@ IGNORE_FIELD_CDC=gg_date,gg_datetime
 TRANSCODE_FIELD_NAME=''
 DELETE_INFO=Always
 SOURCE_FILE_PATH=/var/source_file_path
-ARCHIVE_DEL_FLAG='True'
+ARCHIVE_DEL_FLAG=''
 JOB_NAME=F_DEPLOY_CAMA_CMPNG_DELTA_POWER_ONE
 SCHEDULE_NAME=SCHEDULER_NAME_CMPNG_DELTA_CAMA
 SCHEMA_NAME=CAMA
