--- a/dags/CAMA/CMPNG_DELTA.env
+++ b/dags/CAMA/CMPNG_DELTA.env
@@ -3,7 +3,7 @@ WORK_TABLE_NAME=CAMA_CPMNG_DELTA
 DATA_RETENTION='1 week'
 DATE_FIELD_DRIVING_HISTORIZATION=gg_date
 IGNORE_FIELD_CDC=gg_date,gg_datetime
-TRANSCODE_FIELD_NAME=''
+TRANSCODE_FIELD_NAME='Null'
 DELETE_INFO=Always
 SOURCE_FILE_PATH=/var/source_file_path
 ARCHIVE_DEL_FLAG='Null'
