--- a/dags/CAMA/CMPNG.env
+++ b/dags/CAMA/CMPNG.env
@@ -1,2 +1,13 @@
 SANDBOX=/home/sandbox/poc/jkozak/power_one/source/CAMA/ods
-PYTHONPATH=/home/pythonpath/cmpng
+WORK_TABLE_NAME=CAMA_CPMNG
+DATA_RETENTION='1 week'
+DATE_FIELD_DRIVING_HISTORIZATION=gg_date
+IGNORE_FIELD_CDC=gg_date,gg_datetime
+TRANSCODE_FIELD_NAME='Null'
+DELETE_INFO=Always
+SOURCE_FILE_PATH=/var/source_file_path
+ARCHIVE_DEL_FLAG='None'
+JOB_NAME=F_DEPLOY_CAMA_CMPNG_DELTA_POWER_ONE
+SCHEDULE_NAME=SCHEDULER_NAME_CMPNG_CAMA
+SCHEMA_NAME=CAMA
+TABLE_NAME=CMPNG
