--- a/dags/CAMA/ANALOG.env
+++ b/dags/CAMA/ANALOG.env
@@ -1,2 +1,13 @@
-export SANDBOX=/home/sandbox/poc/jkozak/power_one/source/CAMA/ods/ANALOG
-export PYTHONPATH=/home/jkozak
+SANDBOX=/home/sandbox/poc/jkozak/power_one/source/CAMA/ods/ANALOG
+WORK_TABLE_NAME=CAMA_ANALOG
+DATA_RETENTION='1 week'
+DATE_FIELD_DRIVING_HISTORIZATION=gg_date
+IGNORE_FIELD_CDC=gg_date,gg_datetime
+TRANSCODE_FIELD_NAME='Null'
+DELETE_INFO=Always
+SOURCE_FILE_PATH=/var/source_file_path
+ARCHIVE_DEL_FLAG='None'
+JOB_NAME=F_DEPLOY_CAMA_ANALOG_POWER_ONE
+SCHEDULE_NAME=SCHEDULER_NAME_ANALOG_CAMA
+SCHEMA_NAME=CAMA
+TABLE_NAME=ANALOG
